# ik-capstone-finnie

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  docker-compose.yml  eval_results.json  pyproject.toml  pytest.ini  requirements.txt  start.sh  test_api.py
.claude/agents/: sr_swe.md
.github/workflows/: tests.yml
app/: database.py  main.py  observability.py
app/agent/: finance_agent.py  goal_agent.py  market_agent.py  news_agent.py  portfolio_agent.py  router.py  tax_agent.py
app/evaluation/: __init__.py  evaluators.py  runner.py
app/pages/: 1_📊_Portfolio.py  2_📈_Market.py  3_🎯_Goals.py  4_🔬_Evaluation.py
app/rag/: ingest.py  retriever.py
app/tools/: market_data.py
app/workflow/: __init__.py  graph.py  orchestrator.py
config/: agents.json
data/: portfolio.db
data/articles/: investment_strategies.md
data/glossary/: financial_terms.md
data/knowledge_base/: 01_investment_basics.md  02_stocks_guide.md  03_bonds_guide.md  04_etfs_mutual_funds.md  05_portfolio_management.md  06_retirement_planning.md  07_401k_guide.md  08_ira_guide.md  09_tax_strategies.md  10_market_analysis.md  11_risk_management.md  12_emergency_fund.md  13_real_estate_investing.md  14_debt_management.md  15_financial_planning.md  16_social_security.md  17_hsa_fsa_guide.md  18_529_education_savings.md  19_behavioral_finance.md  20_financial_glossary.md  investing_101.md
data/vector_store/index/: index.faiss  index.pkl
finnie/: __init__.py  main.py
finnie/agents/: __init__.py  base.py  base_agent.py  finance_qa.py  goals.py  market.py  orchestrator.py  portfolio.py  router.py
finnie/config/: __init__.py  settings.py
finnie/observability/: __init__.py  tracing.py
finnie/rag/: __init__.py  pipeline.py
finnie/tools/: __init__.py  base.py  market_data.py
finnie/ui/: app.py
finnie/utils/: __init__.py  config.py  observability.py
scripts/: debug_phoenix.py
tests/: __init__.py  conftest.py  test_agents.py  test_config.py  test_observability.py
tests/agents/: test_base.py  test_router.py
tests/integration/: test_end_to_end.py
tests/rag/: test_pipeline.py
tests/tools/: test_base.py
tests/unit/: test_agents.py  test_orchestrator.py  test_rag.py  test_router.py
