[project]
name = "finnie"
version = "0.1.0"
description = "FinnIE - Multi-Agent Personal Financial Advisor"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.30.0",
    "google-adk",
    "arize-phoenix>=4.0.0",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "python-dotenv",
    "langchain",
    "langchain-community",
    "langchain-text-splitters",
    "openinference-instrumentation-langchain",
    "faiss-cpu",
    "sentence-transformers",
    "yfinance",
    "pandas"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
